LangParser.py
# Generated from LangParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LangParser ( Parser ):

    grammarFileName = "LangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&'", "'|'", "'!'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'+'", "'-'", "'/'", "'//'", 
                     "'*'", "','", "';'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'+='", "'='", "'-='", "'*='", "'/='", "'function'", 
                     "'for'", "'return'", "'if'", "'else'", "'while'", "'until'", 
                     "<INVALID>", "'print'", "'length'", "'reshape'", "'del_col'", 
                     "'del_row'", "'del'", "'insert'", "'max'", "'min'", 
                     "'maxlen'", "'minlen'", "'find'", "'create_row'", "'create_table'", 
                     "'create_column'", "'read_string'", "'copy'", "'numb'", 
                     "'string'", "'table'", "'column'", "'row'", "'void'" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "NOT", "EQUAL", "NOT_EQUAL", 
                      "LESS_EQUAL", "GREATER_EQUAL", "LESS", "GREATER", 
                      "PLUS", "MINUS", "DIV", "FULL_DIV", "MULT", "COMMA", 
                      "SEMI", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "L_SQBRACK", 
                      "P_SQBRACK", "PLUS_EQUAL", "ASSIGN", "MINUS_EQUAL", 
                      "MULT_EQUAL", "DIV_EQUAL", "FUNCTION", "FOR", "RETURN", 
                      "IF", "ELSE", "WHILE", "UNTIL", "COMMENT", "PRINT", 
                      "LENGTH", "RESHAPE", "DEL_COL", "DEL_ROW", "DEL", 
                      "INSERT", "MAX", "MIN", "MAXLEN", "MINLEN", "FIND", 
                      "CREATE_ROW", "CREATE_TABLE", "CREATE_COL", "READ_STRING", 
                      "COPY", "NUMBER_type", "STRING_type", "TABLE", "COLUMN", 
                      "ROW", "VOID", "NUMBER", "STRING", "ID", "WS", "CONST_NUMBER", 
                      "CONST_STRING" ]

    RULE_program = 0
    RULE_def = 1
    RULE_stat = 2
    RULE_funcStat = 3
    RULE_forStat = 4
    RULE_assignExpr = 5
    RULE_varDeclStmt = 6
    RULE_incDecrStat = 7
    RULE_assignSign = 8
    RULE_basicTypeName = 9
    RULE_boolSign = 10
    RULE_numbSign = 11
    RULE_boolNumbSign = 12
    RULE_iterBasicType = 13
    RULE_basicType = 14
    RULE_returnType = 15
    RULE_numbExpr = 16
    RULE_boolExpr = 17
    RULE_ifElseStmt = 18
    RULE_whileStmt = 19
    RULE_untilStmt = 20
    RULE_custFuncCall = 21
    RULE_indexStmt = 22
    RULE_listStmt = 23
    RULE_builtinFuncStmt = 24
    RULE_lengthStmt = 25
    RULE_returnStmt = 26
    RULE_createRowStmt = 27
    RULE_createTablStmt = 28
    RULE_createColStmt = 29
    RULE_copyStmt = 30
    RULE_minMaxFunc = 31
    RULE_minMaxFuncStmt = 32
    RULE_delFunc = 33
    RULE_delFuncStmt = 34
    RULE_reshapeStmt = 35
    RULE_insertStmt = 36
    RULE_findStmt = 37
    RULE_printStmt = 38
    RULE_readStrStmt = 39

    ruleNames =  [ "program", "def", "stat", "funcStat", "forStat", "assignExpr", 
                   "varDeclStmt", "incDecrStat", "assignSign", "basicTypeName", 
                   "boolSign", "numbSign", "boolNumbSign", "iterBasicType", 
                   "basicType", "returnType", "numbExpr", "boolExpr", "ifElseStmt", 
                   "whileStmt", "untilStmt", "custFuncCall", "indexStmt", 
                   "listStmt", "builtinFuncStmt", "lengthStmt", "returnStmt", 
                   "createRowStmt", "createTablStmt", "createColStmt", "copyStmt", 
                   "minMaxFunc", "minMaxFuncStmt", "delFunc", "delFuncStmt", 
                   "reshapeStmt", "insertStmt", "findStmt", "printStmt", 
                   "readStrStmt" ]

    EOF = Token.EOF
    AND=1
    OR=2
    NOT=3
    EQUAL=4
    NOT_EQUAL=5
    LESS_EQUAL=6
    GREATER_EQUAL=7
    LESS=8
    GREATER=9
    PLUS=10
    MINUS=11
    DIV=12
    FULL_DIV=13
    MULT=14
    COMMA=15
    SEMI=16
    LPAREN=17
    RPAREN=18
    LCURLY=19
    RCURLY=20
    L_SQBRACK=21
    P_SQBRACK=22
    PLUS_EQUAL=23
    ASSIGN=24
    MINUS_EQUAL=25
    MULT_EQUAL=26
    DIV_EQUAL=27
    FUNCTION=28
    FOR=29
    RETURN=30
    IF=31
    ELSE=32
    WHILE=33
    UNTIL=34
    COMMENT=35
    PRINT=36
    LENGTH=37
    RESHAPE=38
    DEL_COL=39
    DEL_ROW=40
    DEL=41
    INSERT=42
    MAX=43
    MIN=44
    MAXLEN=45
    MINLEN=46
    FIND=47
    CREATE_ROW=48
    CREATE_TABLE=49
    CREATE_COL=50
    READ_STRING=51
    COPY=52
    NUMBER_type=53
    STRING_type=54
    TABLE=55
    COLUMN=56
    ROW=57
    VOID=58
    NUMBER=59
    STRING=60
    ID=61
    WS=62
    CONST_NUMBER=63
    CONST_STRING=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LangParser.EOF, 0)

        def _def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.DefContext)
            else:
                return self.getTypedRuleContext(LangParser.DefContext,i)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.StatContext)
            else:
                return self.getTypedRuleContext(LangParser.StatContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = LangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 80
                    self._def() 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.PLUS) | (1 << LangParser.MINUS) | (1 << LangParser.LCURLY) | (1 << LangParser.FOR) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.PRINT) | (1 << LangParser.LENGTH) | (1 << LangParser.RESHAPE) | (1 << LangParser.DEL_COL) | (1 << LangParser.DEL_ROW) | (1 << LangParser.DEL) | (1 << LangParser.INSERT) | (1 << LangParser.MAX) | (1 << LangParser.MIN) | (1 << LangParser.MAXLEN) | (1 << LangParser.MINLEN) | (1 << LangParser.FIND) | (1 << LangParser.CREATE_ROW) | (1 << LangParser.CREATE_TABLE) | (1 << LangParser.CREATE_COL) | (1 << LangParser.READ_STRING) | (1 << LangParser.COPY) | (1 << LangParser.NUMBER_type) | (1 << LangParser.STRING_type) | (1 << LangParser.TABLE) | (1 << LangParser.COLUMN) | (1 << LangParser.ROW) | (1 << LangParser.NUMBER) | (1 << LangParser.STRING) | (1 << LangParser.ID))) != 0):
                self.state = 86
                self.stat()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(LangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(LangParser.FUNCTION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.ID)
            else:
                return self.getToken(LangParser.ID, i)

        def LPAREN(self):
            return self.getToken(LangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LangParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(LangParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(LangParser.RCURLY, 0)

        def basicTypeName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.BasicTypeNameContext)
            else:
                return self.getTypedRuleContext(LangParser.BasicTypeNameContext,i)


        def VOID(self):
            return self.getToken(LangParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.COMMA)
            else:
                return self.getToken(LangParser.COMMA, i)

        def funcStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.FuncStatContext)
            else:
                return self.getTypedRuleContext(LangParser.FuncStatContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef" ):
                listener.enterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef" ):
                listener.exitDef(self)




    def _def(self):

        localctx = LangParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LangParser.NUMBER_type, LangParser.STRING_type, LangParser.TABLE, LangParser.COLUMN, LangParser.ROW]:
                self.state = 94
                self.basicTypeName()
                pass
            elif token in [LangParser.VOID]:
                self.state = 95
                self.match(LangParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 98
            self.match(LangParser.FUNCTION)
            self.state = 99
            self.match(LangParser.ID)
            self.state = 100
            self.match(LangParser.LPAREN)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.NUMBER_type) | (1 << LangParser.STRING_type) | (1 << LangParser.TABLE) | (1 << LangParser.COLUMN) | (1 << LangParser.ROW))) != 0):
                self.state = 101
                self.basicTypeName()
                self.state = 102
                self.match(LangParser.ID)


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LangParser.COMMA:
                self.state = 106
                self.match(LangParser.COMMA)
                self.state = 107
                self.basicTypeName()
                self.state = 108
                self.match(LangParser.ID)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(LangParser.RPAREN)
            self.state = 116
            self.match(LangParser.LCURLY)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.PLUS) | (1 << LangParser.MINUS) | (1 << LangParser.LCURLY) | (1 << LangParser.FOR) | (1 << LangParser.RETURN) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.PRINT) | (1 << LangParser.LENGTH) | (1 << LangParser.RESHAPE) | (1 << LangParser.DEL_COL) | (1 << LangParser.DEL_ROW) | (1 << LangParser.DEL) | (1 << LangParser.INSERT) | (1 << LangParser.MAX) | (1 << LangParser.MIN) | (1 << LangParser.MAXLEN) | (1 << LangParser.MINLEN) | (1 << LangParser.FIND) | (1 << LangParser.CREATE_ROW) | (1 << LangParser.CREATE_TABLE) | (1 << LangParser.CREATE_COL) | (1 << LangParser.READ_STRING) | (1 << LangParser.COPY) | (1 << LangParser.NUMBER_type) | (1 << LangParser.STRING_type) | (1 << LangParser.TABLE) | (1 << LangParser.COLUMN) | (1 << LangParser.ROW) | (1 << LangParser.NUMBER) | (1 << LangParser.STRING) | (1 << LangParser.ID))) != 0):
                self.state = 117
                self.funcStat()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(LangParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignExpr(self):
            return self.getTypedRuleContext(LangParser.AssignExprContext,0)


        def SEMI(self):
            return self.getToken(LangParser.SEMI, 0)

        def numbExpr(self):
            return self.getTypedRuleContext(LangParser.NumbExprContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(LangParser.PrintStmtContext,0)


        def forStat(self):
            return self.getTypedRuleContext(LangParser.ForStatContext,0)


        def ifElseStmt(self):
            return self.getTypedRuleContext(LangParser.IfElseStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(LangParser.WhileStmtContext,0)


        def untilStmt(self):
            return self.getTypedRuleContext(LangParser.UntilStmtContext,0)


        def incDecrStat(self):
            return self.getTypedRuleContext(LangParser.IncDecrStatContext,0)


        def varDeclStmt(self):
            return self.getTypedRuleContext(LangParser.VarDeclStmtContext,0)


        def COMMENT(self):
            return self.getToken(LangParser.COMMENT, 0)

        def getRuleIndex(self):
            return LangParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = LangParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 125
                self.assignExpr()
                self.state = 126
                self.match(LangParser.SEMI)
                pass

            elif la_ == 2:
                self.state = 128
                self.numbExpr(0)
                self.state = 129
                self.match(LangParser.SEMI)
                pass

            elif la_ == 3:
                self.state = 131
                self.printStmt()
                self.state = 132
                self.match(LangParser.SEMI)
                pass

            elif la_ == 4:
                self.state = 134
                self.forStat()
                pass

            elif la_ == 5:
                self.state = 135
                self.ifElseStmt()
                pass

            elif la_ == 6:
                self.state = 136
                self.whileStmt()
                pass

            elif la_ == 7:
                self.state = 137
                self.untilStmt()
                pass

            elif la_ == 8:
                self.state = 138
                self.incDecrStat()
                self.state = 139
                self.match(LangParser.SEMI)
                pass

            elif la_ == 9:
                self.state = 141
                self.varDeclStmt()
                self.state = 142
                self.match(LangParser.SEMI)
                pass


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LangParser.COMMENT:
                self.state = 146
                self.match(LangParser.COMMENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(LangParser.StatContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(LangParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_funcStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncStat" ):
                listener.enterFuncStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncStat" ):
                listener.exitFuncStat(self)




    def funcStat(self):

        localctx = LangParser.FuncStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcStat)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LangParser.PLUS, LangParser.MINUS, LangParser.LCURLY, LangParser.FOR, LangParser.IF, LangParser.WHILE, LangParser.PRINT, LangParser.LENGTH, LangParser.RESHAPE, LangParser.DEL_COL, LangParser.DEL_ROW, LangParser.DEL, LangParser.INSERT, LangParser.MAX, LangParser.MIN, LangParser.MAXLEN, LangParser.MINLEN, LangParser.FIND, LangParser.CREATE_ROW, LangParser.CREATE_TABLE, LangParser.CREATE_COL, LangParser.READ_STRING, LangParser.COPY, LangParser.NUMBER_type, LangParser.STRING_type, LangParser.TABLE, LangParser.COLUMN, LangParser.ROW, LangParser.NUMBER, LangParser.STRING, LangParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.stat()
                pass
            elif token in [LangParser.RETURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.returnStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(LangParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(LangParser.LPAREN, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.SEMI)
            else:
                return self.getToken(LangParser.SEMI, i)

        def RPAREN(self):
            return self.getToken(LangParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(LangParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(LangParser.RCURLY, 0)

        def assignExpr(self):
            return self.getTypedRuleContext(LangParser.AssignExprContext,0)


        def boolExpr(self):
            return self.getTypedRuleContext(LangParser.BoolExprContext,0)


        def incDecrStat(self):
            return self.getTypedRuleContext(LangParser.IncDecrStatContext,0)


        def funcStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.FuncStatContext)
            else:
                return self.getTypedRuleContext(LangParser.FuncStatContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_forStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)




    def forStat(self):

        localctx = LangParser.ForStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_forStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(LangParser.FOR)
            self.state = 154
            self.match(LangParser.LPAREN)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.LENGTH) | (1 << LangParser.RESHAPE) | (1 << LangParser.DEL_COL) | (1 << LangParser.DEL_ROW) | (1 << LangParser.DEL) | (1 << LangParser.INSERT) | (1 << LangParser.MAX) | (1 << LangParser.MIN) | (1 << LangParser.MAXLEN) | (1 << LangParser.MINLEN) | (1 << LangParser.FIND) | (1 << LangParser.CREATE_ROW) | (1 << LangParser.CREATE_TABLE) | (1 << LangParser.CREATE_COL) | (1 << LangParser.READ_STRING) | (1 << LangParser.COPY) | (1 << LangParser.NUMBER_type) | (1 << LangParser.STRING_type) | (1 << LangParser.TABLE) | (1 << LangParser.COLUMN) | (1 << LangParser.ROW) | (1 << LangParser.ID))) != 0):
                self.state = 155
                self.assignExpr()


            self.state = 158
            self.match(LangParser.SEMI)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.LENGTH) | (1 << LangParser.RESHAPE) | (1 << LangParser.DEL_COL) | (1 << LangParser.DEL_ROW) | (1 << LangParser.DEL) | (1 << LangParser.INSERT) | (1 << LangParser.MAX) | (1 << LangParser.MIN) | (1 << LangParser.MAXLEN) | (1 << LangParser.MINLEN) | (1 << LangParser.FIND) | (1 << LangParser.CREATE_ROW) | (1 << LangParser.CREATE_TABLE) | (1 << LangParser.CREATE_COL) | (1 << LangParser.READ_STRING) | (1 << LangParser.COPY) | (1 << LangParser.TABLE) | (1 << LangParser.COLUMN) | (1 << LangParser.ROW) | (1 << LangParser.NUMBER) | (1 << LangParser.STRING) | (1 << LangParser.ID))) != 0):
                self.state = 159
                self.boolExpr()


            self.state = 162
            self.match(LangParser.SEMI)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LangParser.PLUS or _la==LangParser.MINUS:
                self.state = 163
                self.incDecrStat()


            self.state = 166
            self.match(LangParser.RPAREN)
            self.state = 167
            self.match(LangParser.LCURLY)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.PLUS) | (1 << LangParser.MINUS) | (1 << LangParser.LCURLY) | (1 << LangParser.FOR) | (1 << LangParser.RETURN) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.PRINT) | (1 << LangParser.LENGTH) | (1 << LangParser.RESHAPE) | (1 << LangParser.DEL_COL) | (1 << LangParser.DEL_ROW) | (1 << LangParser.DEL) | (1 << LangParser.INSERT) | (1 << LangParser.MAX) | (1 << LangParser.MIN) | (1 << LangParser.MAXLEN) | (1 << LangParser.MINLEN) | (1 << LangParser.FIND) | (1 << LangParser.CREATE_ROW) | (1 << LangParser.CREATE_TABLE) | (1 << LangParser.CREATE_COL) | (1 << LangParser.READ_STRING) | (1 << LangParser.COPY) | (1 << LangParser.NUMBER_type) | (1 << LangParser.STRING_type) | (1 << LangParser.TABLE) | (1 << LangParser.COLUMN) | (1 << LangParser.ROW) | (1 << LangParser.NUMBER) | (1 << LangParser.STRING) | (1 << LangParser.ID))) != 0):
                self.state = 168
                self.funcStat()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self.match(LangParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignSign(self):
            return self.getTypedRuleContext(LangParser.AssignSignContext,0)


        def numbExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.NumbExprContext)
            else:
                return self.getTypedRuleContext(LangParser.NumbExprContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.ID)
            else:
                return self.getToken(LangParser.ID, i)

        def indexStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.IndexStmtContext)
            else:
                return self.getTypedRuleContext(LangParser.IndexStmtContext,i)


        def basicTypeName(self):
            return self.getTypedRuleContext(LangParser.BasicTypeNameContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.COMMA)
            else:
                return self.getToken(LangParser.COMMA, i)

        def getRuleIndex(self):
            return LangParser.RULE_assignExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignExpr" ):
                listener.enterAssignExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignExpr" ):
                listener.exitAssignExpr(self)




    def assignExpr(self):

        localctx = LangParser.AssignExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 176
                self.basicTypeName()


            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 179
                self.match(LangParser.ID)
                pass

            elif la_ == 2:
                self.state = 180
                self.indexStmt()
                pass


            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.COMMA) | (1 << LangParser.LENGTH) | (1 << LangParser.RESHAPE) | (1 << LangParser.DEL_COL) | (1 << LangParser.DEL_ROW) | (1 << LangParser.DEL) | (1 << LangParser.INSERT) | (1 << LangParser.MAX) | (1 << LangParser.MIN) | (1 << LangParser.MAXLEN) | (1 << LangParser.MINLEN) | (1 << LangParser.FIND) | (1 << LangParser.CREATE_ROW) | (1 << LangParser.CREATE_TABLE) | (1 << LangParser.CREATE_COL) | (1 << LangParser.READ_STRING) | (1 << LangParser.COPY) | (1 << LangParser.TABLE) | (1 << LangParser.COLUMN) | (1 << LangParser.ROW) | (1 << LangParser.ID))) != 0):
                self.state = 186
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LangParser.COMMA]:
                    self.state = 183
                    self.match(LangParser.COMMA)
                    self.state = 184
                    self.match(LangParser.ID)
                    pass
                elif token in [LangParser.LENGTH, LangParser.RESHAPE, LangParser.DEL_COL, LangParser.DEL_ROW, LangParser.DEL, LangParser.INSERT, LangParser.MAX, LangParser.MIN, LangParser.MAXLEN, LangParser.MINLEN, LangParser.FIND, LangParser.CREATE_ROW, LangParser.CREATE_TABLE, LangParser.CREATE_COL, LangParser.READ_STRING, LangParser.COPY, LangParser.TABLE, LangParser.COLUMN, LangParser.ROW, LangParser.ID]:
                    self.state = 185
                    self.indexStmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
